Fixed problem with board being too short in current new browsers.

--- a/client/sprig.css
+++ b/client/sprig.css
@@ -13,8 +13,9 @@ body {
   height: 100%;
 }
 
-svg#svgBoard {
+#svgBoard {
   border: 1px dotted rgba(224, 235, 255, 0.1);
+  min-height: 400px;
 }
 
 .arrowboard {
